syntax = "proto3";

package wallet;

option go_package = "walletService/proto/client";

// gRPC сервис кошелька
service WalletService {
  rpc CreateWallet (WalletRequest) returns (WalletResponse);

  rpc CreateAccount (AccountRequest) returns (AccountResponse);

  rpc DeleteWallet (WalletRequest) returns (WalletResponse);

  rpc DeleteAccount (AccountRequest) returns (AccountResponse);
}

message WalletRequest {
  int64 user_id = 1;
}

message WalletResponse {
  int64 wallet_id = 1;
}

message AccountRequest {
  string currency = 1;
  int64 wallet_id = 2;
}

message AccountResponse {
  int64 account_id = 1;
}
